# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])

m4_define([PKG_NAME], firewalld)
m4_define([PKG_VERSION], m4_bpatsubst(m4_esyscmd([grep "Version:" firewalld.spec]), [Version:\W\([0-9.]*\)\W], [\1]))
m4_define([PKG_RELEASE], m4_bpatsubst(m4_esyscmd([grep "Release:" firewalld.spec]), [Release:\W\([0-9.]*\).*\W], [\1]))
m4_define([PKG_TAG], m4_bpatsubst(m4_format(r%s-%s, PKG_VERSION, PKG_RELEASE), [\.], [_]))

AC_INIT(PKG_NAME, PKG_VERSION)
AC_CONFIG_SRCDIR([src/firewalld])
AM_INIT_AUTOMAKE([1.9 tar-ustar no-define foreign dist-bzip2 no-dist-gzip])

AC_SUBST([PACKAGE_RELEASE], '[PKG_RELEASE]')
AC_DEFINE_UNQUOTED([PACKAGE_RELEASE], ["$PACKAGE_RELEASE"])
AC_SUBST([PACKAGE_TAG], '[PKG_TAG]')
AC_DEFINE_UNQUOTED([PACKAGE_TAG], ["$PACKAGE_TAG"])

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PATH_PYTHON

GLIB_GSETTINGS

#############################################################

#AC_ARG_ENABLE([systemd],
#       AS_HELP_STRING([--disable-systemd], [Enable systemd support]),
#       [USE_SYSTEMD=$enableval], [USE_SYSTEMD=yes])
#AC_SUBST(USE_SYSTEMD)

#############################################################

AC_SUBST([GETTEXT_PACKAGE], '[PKG_NAME]')
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"],)

IT_PROG_INTLTOOL([0.35.0], [no-xml])
AM_PO_SUBDIRS

AC_CONFIG_FILES([Makefile
		 doxygen.conf
                 config/Makefile
		 doc/Makefile
                 doc/man/Makefile
                 doc/man/man1/Makefile
                 doc/man/man1/firewall-cmd.1
                 po/Makefile.in
		 src/firewall/config/__init__.py
		 src/Makefile])
AC_OUTPUT
